force-app/main/default/objects/ffr__fflib_SchedulerConfiguration__c/ffr__fflib_SchedulerConfiguration__c.object-meta.xml
<CustomObject>
    <description>The underlying object used to configure the Scheduler with information such as a job&apos;s start and end dates or on which days to run a job.</description>
    <label>FFR Scheduler Configuration</label>
    <nameField>
        <displayFormat>SC-{YYYY}{MM}{DD}-{0000}</displayFormat>
        <label>fflib_SchedulerConfiguration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FFR Scheduler Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>