force-app/main/default/objects/ffr__fflib_SchedulerConfiguration__c/fields/ffr__EndDate__c.field-meta.xml
<CustomField>
    <fullName>ffr__EndDate__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>