force-app/main/default/objects/ffr__fflib_SchedulerConfiguration__c/fields/ffr__MonthlyRecurRelativeDateFlavor__c.field-meta.xml
<CustomField>
    <fullName>ffr__MonthlyRecurRelativeDateFlavor__c</fullName>
    <label>Flavor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monday</fullName>
            </value>
            <value>
                <fullName>Tuesday</fullName>
            </value>
            <value>
                <fullName>Wednesday</fullName>
            </value>
            <value>
                <fullName>Thursday</fullName>
            </value>
            <value>
                <fullName>Friday</fullName>
            </value>
            <value>
                <fullName>Saturday</fullName>
            </value>
            <value>
                <fullName>Sunday</fullName>
            </value>
            <value>
                <fullName>Weekday</fullName>
                <default>true</default>
                <label>Weekday</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>