force-app/main/default/objects/ffr__fflib_SchedulerConfiguration__c/fields/ffr__NearestWeekday__c.field-meta.xml
<CustomField>
    <fullName>ffr__NearestWeekday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Run on nearest weekday</label>
    <type>Checkbox</type>
</CustomField>