force-app/main/default/objects/ffr__fflib_SchedulerConfiguration__c/fields/ffr__PreferredStartTimeMinute__c.field-meta.xml
<CustomField>
    <fullName>ffr__PreferredStartTimeMinute__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Preferred Start Time Minute</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>