force-app/main/default/objects/ffr__fflib_SchedulerConfiguration__c/fields/ffr__StartDate__c.field-meta.xml
<CustomField>
    <fullName>ffr__StartDate__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>