force-app/main/default/objects/ffr__fflib_SchedulerConfiguration__c/fields/ffr__WeeklyRecurOnDays__c.field-meta.xml
<CustomField>
    <fullName>ffr__WeeklyRecurOnDays__c</fullName>
    <description>Which weekdays to recur on, if recurring on a weekly basis.</description>
    <label>Recur Every Week on</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monday</fullName>
            </value>
            <value>
                <fullName>Tuesday</fullName>
            </value>
            <value>
                <fullName>Wednesday</fullName>
            </value>
            <value>
                <fullName>Thursday</fullName>
            </value>
            <value>
                <fullName>Friday</fullName>
            </value>
            <value>
                <fullName>Saturday</fullName>
            </value>
            <value>
                <fullName>Sunday</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>